[gd_scene load_steps=22 format=3 uid="uid://dgk1w44dspr5g"]

[ext_resource type="Script" path="res://scenes/game_objects/mummy_enemy/mummy_enemy.gd" id="1_xpm68"]
[ext_resource type="PackedScene" uid="uid://g38lucl12bnx" path="res://scenes/components/health_component.tscn" id="2_ksi2p"]
[ext_resource type="PackedScene" uid="uid://b8qomfl1wd42l" path="res://scenes/components/vial_drop_component.tscn" id="3_xnb2m"]
[ext_resource type="PackedScene" uid="uid://cg8s0x8300kgo" path="res://scenes/components/death_component.tscn" id="4_g4qdg"]
[ext_resource type="PackedScene" uid="uid://8moua6rficel" path="res://scenes/components/velocity_component.tscn" id="4_i7ppx"]
[ext_resource type="PackedScene" uid="uid://c2mjbittu15sy" path="res://scenes/components/hurtbox_component.tscn" id="4_u8fqm"]
[ext_resource type="Shader" path="res://scenes/components/hit_flash_component.gdshader" id="6_xt2sa"]
[ext_resource type="PackedScene" uid="uid://byi8c0p6u7lqc" path="res://scenes/components/hit_flash_component.tscn" id="8_elwk8"]
[ext_resource type="AudioStream" uid="uid://dodv50foq87i2" path="res://assets/audio/footstep_carpet_000.ogg" id="10_w0xd6"]
[ext_resource type="PackedScene" uid="uid://dpb2pclf6b7xv" path="res://scenes/components/random_stream_player_2d_component.tscn" id="11_6ruyp"]
[ext_resource type="AudioStream" uid="uid://cm1xmudtwy2my" path="res://assets/audio/footstep_carpet_001.ogg" id="12_q0ryq"]
[ext_resource type="AudioStream" uid="uid://cy7evl7iaekhm" path="res://assets/audio/footstep_carpet_002.ogg" id="13_l427d"]
[ext_resource type="AudioStream" uid="uid://c7gjft8wv8rtb" path="res://assets/audio/footstep_carpet_003.ogg" id="14_voa8a"]
[ext_resource type="AudioStream" uid="uid://dv627s88ve3er" path="res://assets/audio/footstep_carpet_004.ogg" id="15_8heky"]
[ext_resource type="Texture2D" uid="uid://bl7q7dllvk4ym" path="res://scenes/game_objects/mummy_enemy/mummy.png" id="15_x6ulv"]

[sub_resource type="Animation" id="Animation_aksl7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_unhj3"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.174533, -0.174533, 0.174533, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vntyu"]
_data = {
"RESET": SubResource("Animation_aksl7"),
"walk": SubResource("Animation_unhj3")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_anmmi"]
resource_local_to_scene = true
shader = ExtResource("6_xt2sa")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wh32c"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ouxd1"]
radius = 5.0

[node name="MummyEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_xpm68")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vntyu")
}
autoplay = "walk"

[node name="HealthComponent" parent="." instance=ExtResource("2_ksi2p")]
max_health = 120.0

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_xnb2m")]
drop_percent = 1.0
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("4_i7ppx")]
max_speed = 50
acceleration = 200.0

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("8_elwk8")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_anmmi")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_g4qdg")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HitRandomAudioPlayerComponent" parent="." instance=ExtResource("11_6ruyp")]
streams = Array[AudioStream]([ExtResource("10_w0xd6"), ExtResource("12_q0ryq"), ExtResource("13_l427d"), ExtResource("14_voa8a"), ExtResource("15_8heky")])

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_u8fqm")]
visible = false
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_wh32c")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("15_x6ulv")
offset = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_ouxd1")
